# logan

./: .gitignore  Cargo.toml  Makefile  README.md  default.nix  doodle.rs  la.rs  lars  lars.txt  logan  run_diff.rs  run_uart.rs  saleae.cpp  test_uart.rs
apps/: ice40.rs  rle.c  saleae.cpp  saleae.sh  uart.rs
dev/: Makefile  saleae.cpp
doc/: lars.txt
erl/: lars.erl  logan.erl
examples/: Makefile  beaglelogic.sh  beaglelogic_ssh_lz4.sh  beaglelogic_ssh_lzo.sh  diff.rs  ice40.rs  rle.c  saleae.cpp  slip.rs  start.sh  uart.rs
src/: Makefile  decode.rs  io.rs  la.rs  lars.rs  lib.rs  logan.rs  mipmap.rs  run_diff.rs  run_uart.rs  sm.rs  stuff.rs  test_syncser.rs  test_uart.rs  tick.rs
tests/: test_slip.rs  test_syncser.rs  test_uart.rs
tests/disabled/: test_slip.rs  test_syncser.rs
