[package]
name = "lars"
version = "0.0.0"
authors = [
	"Tom Schouten <tom@zwizwa.be>",
]

description = "Logic Analyzer and Protocol Decoder library"
homepage = "https://github.com/zwizwa/lars"
repository = "https://github.com/zwizwa/lars"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/zwizwa/lars"

[dependencies]
derive_more = "0.9"

[lib]
name = "la"
path = "src/lib.rs"


[[bin]]
name = "lars"
path = "src/lars.rs"
