[package]

name = "logan"
version = "0.0.1"
authors = [
	"Tom Schouten <tom@zwizwa.be>",
]

description = "Logic Analyzer and Protocol Decoder library"
homepage = "https://github.com/zwizwa/logan"
repository = "https://github.com/zwizwa/logan"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/zwizwa/logan"

[dependencies]
derive_more = "0.9"

[lib]
name = "logan"
path = "src/lib.rs"


[[bin]]
name = "logan"
path = "src/logan.rs"
